--- a/ScreenCam/App.config
+++ b/ScreenCam/App.config
@@ -7,7 +7,7 @@
     </configSections>
     <startup> 
         
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup>
     <userSettings>
         <ScreenCam.Properties.Settings>
             <setting name="MainWindowLocation" serializeAs="String">
@@ -17,7 +17,7 @@
                 <value>586, 301</value>
             </setting>
             <setting name="LastStorageLocation" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="EditorWindowSize" serializeAs="String">
                 <value>450, 300</value>
@@ -44,4 +44,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <System.Windows.Forms.ApplicationConfigurationSection>
+    <add key="DpiAwareness" value="PerMonitorV2" />
+  </System.Windows.Forms.ApplicationConfigurationSection>
 </configuration>
