--- a/ScreenCam/Properties/Settings.settings
+++ b/ScreenCam/Properties/Settings.settings
@@ -23,7 +23,7 @@
     <Setting Name="HighlightCursor" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="FPS" Type="System.Byte" Scope="User">
+    <Setting Name="FPS" Type="System.UInt16" Scope="User">
       <Value Profile="(Default)">30</Value>
     </Setting>
   </Settings>
